fix #12718: dont cut off var tab buttons

--- a/main/res/layout/cachedetail_variables_page.xml
+++ b/main/res/layout/cachedetail_variables_page.xml
@@ -26,15 +26,16 @@
             android:text="@string/variables_titletext"
             />
 
-        <LinearLayout
+        <com.google.android.material.chip.ChipGroup
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="4sp">
 
             <Button
                 android:id="@+id/variables_add"
                 style="@style/button"
-                android:layout_margin="6dp"
+                android:layout_margin="3dp"
                 android:minWidth="2dp"
                 app:icon="@drawable/ic_menu_add" />
             <Button
@@ -43,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_margin="6dp"
+                android:layout_margin="3dp"
                 android:minWidth="2dp"
                 app:icon="@drawable/ic_menu_add" />
 
@@ -53,25 +54,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_margin="6dp"
+                android:layout_margin="3dp"
                 android:text="@string/variables_scanlisting"
                 app:icon="@drawable/ic_menu_add" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
 
             <Button
                 android:id="@+id/variables_tidyup"
                 style="@style/button"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:layout_margin="6dp"
+                android:layout_margin="3dp"
                 app:icon="@drawable/ic_menu_auto_fix_high"
                 android:text="@string/variables_tidyup"/>
 
@@ -79,6 +71,8 @@
                 android:id="@+id/variables_deleteall"
                 style="@style/button"
                 android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:layout_margin="3dp"
                 android:text="@string/variables_deleteall"
                 app:icon="@drawable/ic_menu_delete"/>
 
@@ -86,10 +80,10 @@
                 android:id="@+id/variables_info"
                 style="@style/button"
                 android:text="@string/variables_info"
-                android:layout_margin="6dp"
+                android:layout_margin="3dp"
                 android:layout_gravity="center_horizontal"
                 app:icon="@drawable/settings_info" />
-        </LinearLayout>
+        </com.google.android.material.chip.ChipGroup>
 
         <View
             android:id="@+id/filter_storage_options_line"
