Add menu item to remove all generated waypoints (rel. to #12626)

--- a/main/res/menu/cache_options.xml
+++ b/main/res/menu/cache_options.xml
@@ -104,6 +104,11 @@
                 android:visible="false">
             </item>
             <item
+                android:id="@+id/menu_delete_generated_waypoints"
+                android:title="@string/cache_delete_generated_waypoints"
+                android:visible="false">
+            </item>
+            <item
                 android:id="@+id/menu_extract_waypoints"
                 android:title="@string/cache_menu_extract_waypoints"
                 app:showAsAction="ifRoom"
