--- a/main/res/layout/coordinatescalculateglobal_dialog.xml
+++ b/main/res/layout/coordinatescalculateglobal_dialog.xml
@@ -45,15 +45,10 @@
                 tools:listitem="@android:layout/simple_spinner_item" />
 
             <Button
-                android:id="@+id/cc_remove_spaces"
-                style="@style/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_toRightOf="@id/cc_switch_guided"
+                android:id="@+id/cc_plain_tools"
+                style="@style/button_icon_accent"
+                android:layout_alignParentRight="true"
                 app:icon="@drawable/ic_menu_auto_fix_high"
-                android:text="@string/calccoord_remove_spaces"
                 android:layout_centerVertical="true"/>
 
             </RelativeLayout>
