Use c:cgeo user guide for formula syntax help

--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -306,5 +306,5 @@
     <string translatable="false" name="mailsubject_problem_report">c:geo problem report (%s)</string>
 
     <!-- Help Ressources -->
-    <string translatable="false" name="formula_syntax_url">https://github.com/cgeo/cgeo/wiki/Calculator-Formula-Syntax</string>
+    <string translatable="false" name="formula_syntax_url">https://manual.cgeo.org/en/cachevariables</string>
 </resources>
