--- a/main/res/layout/view_settings_add.xml
+++ b/main/res/layout/view_settings_add.xml
@@ -12,10 +12,12 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout style="@style/textinput_edittext_singleline">
+
             <EditText
                 android:id="@+id/preference_name"
-                style="@style/textinput_embedded"
+                style="@style/textinput_embedded_singleline"
                 android:hint="@string/add_setting_preference_name"
+                android:inputType="textVisiblePassword"
                 android:textSize="@dimen/textSize_detailsPrimary" />
         </com.google.android.material.textfield.TextInputLayout>
 
