--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -159,6 +159,7 @@
     <string translatable="false" name="pref_plainLogs">plainLogs</string>
     <string translatable="false" name="pref_selected_language">selectedLanguage</string>
     <string translatable="false" name="pref_units_imperial">units</string>
+    <string translatable="false" name="pref_quicklaunchitems">quicklaunchitems</string>
 
 
     <!-- ============================================================================================================================================================================== -->
