--- a/main/res/xml/preferences_appearence.xml
+++ b/main/res/xml/preferences_appearence.xml
@@ -42,4 +42,9 @@
         android:summary="@string/init_summary_units"
         android:title="@string/init_units"
         app:iconSpaceReserved="false" />
+    <MultiSelectListPreference
+        android:key="@string/pref_quicklaunchitems"
+        android:title="Quick launch buttons"
+        android:summary="Select one or more items as quick launch buttons on home screen"
+        app:iconSpaceReserved="false" />
 </PreferenceScreen>
